[gd_scene load_steps=18 format=3 uid="uid://duql86v5pfsbg"]

[ext_resource type="Script" uid="uid://bpcshc2et3wjj" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://bcgoofkkue8p5" path="res://Player/PlayerAssets/PlayerDefault1.png" id="2_00tjw"]
[ext_resource type="Texture2D" uid="uid://55yjqthn0gtr" path="res://Player/PlayerAssets/PlayerDefault2.png" id="3_x3vf3"]
[ext_resource type="Texture2D" uid="uid://51xk1hnni4bf" path="res://Player/PlayerAssets/PlayerLookDown1.png" id="4_x3vf3"]
[ext_resource type="Texture2D" uid="uid://c1s0lkvhhpidp" path="res://Player/PlayerAssets/PlayerLookDown2.png" id="5_apopc"]
[ext_resource type="Texture2D" uid="uid://b68m8j7ocekd7" path="res://Player/PlayerAssets/PlayerLookFornt1.png" id="6_5htga"]
[ext_resource type="Texture2D" uid="uid://cmcmcymgcxcpe" path="res://Player/PlayerAssets/PlayerLookFornt2.png" id="7_p5o4e"]
[ext_resource type="Texture2D" uid="uid://cp4ttjoq8uakg" path="res://Player/PlayerAssets/PlayerLookUp1.png" id="8_gu6f8"]
[ext_resource type="Texture2D" uid="uid://c5cl5mmf7445c" path="res://Player/PlayerAssets/PlayerLookUp2.png" id="9_dkpta"]
[ext_resource type="Script" uid="uid://bqx7dt7sisf4w" path="res://Player/player_animation.gd" id="10_x3vf3"]
[ext_resource type="Script" uid="uid://cik2xq423wwg4" path="res://Player/look_direc_collision.gd" id="11_apopc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_onrkg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_00tjw")
}, {
"duration": 1.0,
"texture": ExtResource("3_x3vf3")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_x3vf3")
}, {
"duration": 1.0,
"texture": ExtResource("5_apopc")
}],
"loop": true,
"name": &"LookingDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_5htga")
}, {
"duration": 1.0,
"texture": ExtResource("7_p5o4e")
}],
"loop": true,
"name": &"LookingFront",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_gu6f8")
}, {
"duration": 1.0,
"texture": ExtResource("9_dkpta")
}],
"loop": true,
"name": &"LookingUp",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3vf3"]
size = Vector2(6, 34)

[sub_resource type="BoxMesh" id="BoxMesh_apopc"]
size = Vector3(6, 34, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(6, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apopc"]
size = Vector2(16, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5htga"]
size = Vector2(6, 27)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4ntmi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_onrkg")
animation = &"LookingUp"
frame_progress = 0.713854
script = ExtResource("10_x3vf3")

[node name="LookArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="LookDirecCollision" type="CollisionShape2D" parent="LookArea"]
physics_interpolation_mode = 2
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_x3vf3")
script = ExtResource("11_apopc")

[node name="MeshInstance2D" type="MeshInstance2D" parent="LookArea/LookDirecCollision"]
mesh = SubResource("BoxMesh_apopc")

[node name="GeometryBodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_i3pqv")

[node name="GeometryFeetCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 14.5)
shape = SubResource("RectangleShape2D_apopc")

[node name="DamageHitBox" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="DamageHitBox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_5htga")
